applications/poker/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker
  namespace: poker
spec:
  type: ClusterIP
  selector:
    app: poker
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
